--- a/estilo.css
+++ b/estilo.css
@@ -2,3 +2,13 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    background-color: aliceblue;
+}
+
+h1{
+    text-align: center;
+    color: aqua;
+    font-size: 40px;
+}
